# solana-cookbook

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  docker-compose.debug.yml  docker-compose.yml  docusaurus.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  senU2KGFEW2uUsExubYKVL5Dq9h29UjSfRdwiSVzsWw.json  vercel.json
.ci/: .exclude_files  scripts.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: python.yml
code/anchor/testing-with-anchor/program/: Cargo.toml
code/anchor/testing-with-anchor/program/src/: define-increment.preview.lib.rs  lib.rs
code/connecting-cluster/: connecting-cluster.en.sh
code/connecting-private-cluster/: connecting-private-cluster.en.sh
code/cpi/: invoke.rs  invoke_signed.rs
code/create-system-account/: create-system-account.en.ts
code/data-migration/: account-v1.preview.en.rs  rust.account_state1.en.rs  rust.instruction.en.rs  rust.instruction.preview.en.rs  rust.instruction1.en.rs  rust.processor.en.rs  rust.processor.preview.en.rs  rust.processor1.en.rs
code/data-versioning/: account-v1.en.rs  account-v1.preview.en.rs  rust.account_state.en.rs  rust.account_state1.en.rs
code/dex-integration/: faucet.ts  index.ts  readingMarket.ts  utils.ts
code/feature-parity-testing/: deactivate_one.rs  deactivate_scfs.rs  deactivate_two.rs  preamble.rs  preamble_short.rs
code/generate-keypair/: generate-keypair.en.sh  generate-keypair.en.ts
docs/: Getting Started.mdx  README.md  References.mdx  Table of Contents.md  intro.md
id/: README.md
(+1181 files in other folders)
